# spot_ros2_gazebo

./: README.md
spot_ros2_application/: CMakeLists.txt  package.xml
spot_ros2_bringup/: CMakeLists.txt  package.xml
spot_ros2_bringup/config/: spot.rviz  spot_bridge.yaml
spot_ros2_bringup/launch/: diff_drive.launch.py  spot.launch.py
spot_ros2_description/: CMakeLists.txt  package.xml
spot_ros2_description/models/spot/: model.config  model.sdf  model.urdf
spot_ros2_gazebo/: CMakeLists.txt  package.xml
spot_ros2_gazebo/include/spot_ros2_gazebo/: BasicSystem.hh  FullSystem.hh
spot_ros2_gazebo/src/: BasicSystem.cc  FullSystem.cc
spot_ros2_gazebo/worlds/: diff_drive.sdf  edgar_mine_world.sdf
spot_ros2_gz_controller/: package.xml  setup.cfg  setup.py
spot_ros2_gz_controller/spot_ros2_gz_controller/: dynamics.py  explicit_swing_trajectory_generator.py  gait_scheduler.py  robot_state.py  spot_controller.py  swing_trajectory.py
