<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spot_ros2_gz_controller</name>
  <version>0.0.0</version>
  <description>Application-specific implementations for the spot_ros2 example</description>
  <maintainer email="ygao@missouri.edu">Yixiang Gao</maintainer>
  <license>Apache 2.0</license>
  <author>Yixiang Gao</author>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

